syntax = "proto3";
package fifsky.blog.admin.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";

option go_package = "gen/admin/v1";

message IDRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message IDResponse {
  int32 id = 1;
}

message PageRequest {
  int32 page = 1 [(buf.validate.field).int32.gt = 0];
}

message Options {
  map<string, string> kv = 1 [(buf.validate.field).map.min_pairs = 1];
}

message UserSummary {
  int32 id = 1;
  string name = 2;
  string nick_name = 3;
}

message CateSummary {
  int32 id = 1;
  string name = 2;
  string domain = 3;
}
