syntax = "proto3";
package fifsky.blog.api.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";
import "types/common.proto";

option go_package = "gen/api/v1";

// ArticleService 提供文章相关的接口
service ArticleService {
  // Archive 获取文章归档
  rpc Archive(google.protobuf.Empty) returns (ArchiveResponse) {
    option (google.api.http) = {
      post: "/blog/article/archive"
      body: "*"
    };
  }
  // List 获取文章列表
  rpc List(ArticleListRequest) returns (ArticleListResponse) {
    option (google.api.http) = {
      post: "/blog/article/list"
      body: "*"
    };
  }
  // PrevNext 获取上一篇下一篇文章
  rpc PrevNext(PrevNextRequest) returns (PrevNextResponse) {
    option (google.api.http) = {
      post: "/blog/article/prevnext"
      body: "*"
    };
  }
  // Detail 获取文章详情
  rpc Detail(ArticleDetailRequest) returns (ArticleItem) {
    option (google.api.http) = {
      post: "/blog/article/detail"
      body: "*"
    };
  }
  // Feed 获取文章 RSS 订阅
  rpc Feed(google.protobuf.Empty) returns (google.api.HttpBody) {
    option (google.api.http) = {get: "/blog/feed.xml"};
  }
  // Calendar 获取日历文章日期
  rpc Calendar(ArticleCalendarRequest) returns (ArticleCalendarResponse) {
    option (google.api.http) = {
      post: "/blog/article/calendar"
      body: "*"
    };
  }
}

message ArchiveResponse {
  repeated DateArchiveItem list = 1;
}
message DateArchiveItem {
  string url = 1;
  string content = 2;
}

message ArticleCalendarRequest {
  int32 year = 1;
  int32 month = 2;
}

message ArticleCalendarResponse {
  repeated int32 days = 1;
}

message ArticleListRequest {
  string year = 1;
  string month = 2;
  string domain = 3;
  string keyword = 4;
  int32 page = 5;
  int32 type = 6;
  string day = 7;
  int32 page_size = 8;
}

message ArticleItem {
  int32 id = 1;
  int32 cate_id = 2;
  int32 type = 3;
  int32 user_id = 4;
  string title = 5;
  string url = 6;
  string content = 7;
  int32 status = 8;
  string created_at = 9;
  string updated_at = 10;
  fifsky.blog.types.UserSummary user = 11;
  fifsky.blog.types.CateSummary cate = 12;
  int32 view_num = 13;
}

message ArticleListResponse {
  repeated ArticleItem list = 1;
  int32 total = 2;
}

message PrevNextRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}
message PrevNextItem {
  int32 id = 1;
  string title = 2;
}
message PrevNextResponse {
  PrevNextItem prev = 1;
  PrevNextItem next = 2;
}

message ArticleDetailRequest {
  int32 id = 1 [(buf.validate.field).int32.gt = 0];
  string url = 2;

  option (buf.validate.message).oneof = {
    // At most one search method can be used
    fields: [
      "id",
      "url"
    ]
    // One search method must be present
    required: true
  };
}
